Working mechanism for at least one architecture and directly injected modules